--- a/po/el.po
+++ b/po/el.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-29 18:59+0100\n"
+"POT-Creation-Date: 2020-06-06 14:43+0100\n"
 "PO-Revision-Date: 2016-02-18 16:08-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Greek\n"
@@ -15,298 +15,315 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: el\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
-
-#: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
-msgid "SAR"
-msgstr "SAR (ΕκΔ)"
-
-#: src/SARgui.h:206 src/SARgui_impl.h:48
-msgid "SAR preferences"
-msgstr "Προτιμήσεις SAR"
-
-#: src/SARgui.cpp:27
-msgid "Parallel Search"
-msgstr "Παράλληλη έρευνα"
-
-#: src/SARgui.cpp:39 src/SARgui.cpp:188
-msgid "Approach course     "
-msgstr "Πορεία προσέγγισης     "
-
-#: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
-#: src/SARgui.cpp:462
-msgid "Degrees"
-msgstr "Μοίρες"
-
-#: src/SARgui.cpp:56
-msgid "Leg Distance              "
-msgstr "Μήκος σκέλους              "
-
-#: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
-#: src/SARgui.cpp:445 src/SARgui.cpp:764
-msgid "NM"
-msgstr "ν. μ."
-
-#: src/SARgui.cpp:73
-msgid "Leg Spacing                "
-msgstr "Απόσταση σκελών                "
-
-#: src/SARgui.cpp:90
-msgid "Number of Legs       "
-msgstr "Αριθμός σκελών       "
-
-#: src/SARgui.cpp:97 src/SARgui.cpp:229
-msgid "n"
-msgstr "n"
-
-#: src/SARgui.cpp:107 src/SARgui.cpp:239
-msgid "Search Speed             "
-msgstr "Ταχύτητα έρευνας             "
-
-#: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
-msgid "kts"
-msgstr "κόμβοι"
-
-#: src/SARgui.cpp:124
-msgid "For Ship Number      "
-msgstr "Για το πλοίο #      "
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "1"
-msgstr "1"
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "2"
-msgstr "2"
-
-#: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
-msgid "Calculate"
-msgstr "Υπολογισμός"
-
-#: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
-msgid "Generate &GPX"
-msgstr "Δημιουργία &GPX"
-
-#: src/SARgui.cpp:165
-msgid "SAR: Trackline"
-msgstr "SAR: ίχνος"
-
-#: src/SARgui.cpp:176
-msgid "Expanding Square\n"
-"         Search"
-msgstr "Επέκταση τετραγώνου\n"
-" έρευνας"
-
-#: src/SARgui.cpp:205
-msgid "Leg Distance               "
-msgstr "Μήκος σκέλους               "
-
-#: src/SARgui.cpp:222
-msgid "Number of Squares"
-msgstr "Αριθμός τετραγώνων"
-
-#: src/SARgui.cpp:283
-msgid "SAR: Expanding Square"
-msgstr "SAR: Επέκταση τετραγώνου"
-
-#: src/SARgui.cpp:292
-msgid "Sector Search"
-msgstr "Αναζήτηση τομέα"
-
-#: src/SARgui.cpp:304 src/SARgui.cpp:421
-msgid "Approach course"
-msgstr "Πορεία προσέγγισης"
-
-#: src/SARgui.cpp:321 src/SARgui.cpp:438
-msgid "Leg Distance          "
-msgstr "Μήκος σκέλους          "
-
-#: src/SARgui.cpp:338
-msgid "Search Speed        "
-msgstr "Ταχύτητα έρευνας        "
-
-#: src/SARgui.cpp:355
-msgid "Number of cycles"
-msgstr "Αριθμός κύκλων"
-
-#: src/SARgui.cpp:398
-msgid "SAR: Sector Search"
-msgstr "SAR: Τομέας έρευνας"
-
-#: src/SARgui.cpp:409
-msgid "Oil Rig Search"
-msgstr "Αναζήτηση πλατφόρμας πετρελαίου"
-
-#: src/SARgui.cpp:455
-msgid "Number of Legs   "
-msgstr "Αριθμός σκελών   "
-
-#: src/SARgui.cpp:472
-msgid "Search Speed         "
-msgstr "Ταχύτητα αναζήτησης         "
-
-#: src/SARgui.cpp:516
-msgid "SAR: Oil Rig"
-msgstr "SAR: Πλατφόρμα πετρελαίου"
-
-#: src/SARgui.cpp:529 src/SARgui.cpp:633
-msgid "Datum (Start of Search)"
-msgstr "Θέση (έναρξη της αναζήτησης)"
-
-#: src/SARgui.cpp:540
-msgid "Lattitude  "
-msgstr "Γ. Πλάτος  "
-
-#: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
-msgid "\\u00b0"
-msgstr "\\u00b0"
-
-#: src/SARgui.cpp:557
-msgid "Longitude"
-msgstr "Γ. μήκος"
-
-#: src/SARgui.cpp:578
-msgid "Ship"
-msgstr "Πλοίο"
-
-#: src/SARgui.cpp:579
-msgid "Copy ship position (GPS fix required)"
-msgstr "Αντίγραφο θέσης πλοίου (απαιτείται στίγμα GPS)"
-
-#: src/SARgui.cpp:583
-msgid "Cursor"
-msgstr "Δρομέας"
-
-#: src/SARgui.cpp:599
-msgid "Search Pattern name for GPX file"
-msgstr "Όνομα μοτίβου αναζήτησης για το αρχείο GPX"
-
-#: src/SARgui.cpp:607
-msgid "Route"
-msgstr "Διαδρομή"
-
-#: src/SARgui.cpp:627
-msgid "Decimal Degree"
-msgstr "Μοίρες με δεκαδικά"
-
-#: src/SARgui.cpp:641
-msgid "Lat "
-msgstr "Πλάτος "
-
-#: src/SARgui.cpp:655 src/SARgui.cpp:692
-msgid "'"
-msgstr "'"
-
-#: src/SARgui.cpp:662 src/SARgui.cpp:699
+#
+msgid "    SAR panel icon has NOT been loaded"
+msgstr ""
+#
+msgid ""
+"   Oil Rig Search\n"
+"(Quadrant Single)"
+msgstr ""
+#
 msgid "\""
 msgstr "\""
-
-#: src/SARgui.cpp:666
-msgid "N"
-msgstr "Β"
-
-#: src/SARgui.cpp:666
-msgid "S"
-msgstr "Ν"
-
-#: src/SARgui.cpp:678
-msgid "Lon"
-msgstr "Μήκος"
-
-#: src/SARgui.cpp:703
-msgid "E"
-msgstr "Α"
-
-#: src/SARgui.cpp:703
-msgid "W"
-msgstr "Δ"
-
-#: src/SARgui.cpp:721
-msgid "Convert to Degree"
-msgstr "Μετατροπή σε μοίρες"
-
-#: src/SARgui.cpp:731
-msgid "\\u00b0 ' \""
-msgstr "\\u00b0 ' \""
-
-#: src/SARgui.cpp:745
-msgid "Results"
-msgstr "Αποτελέσματα"
-
-#: src/SARgui.cpp:757
-msgid "Search Distance"
-msgstr "Απόσταση έρευνας"
-
-#: src/SARgui.cpp:774
-msgid "Search Time        "
-msgstr "Χρόνος έρευνας        "
-
-#: src/SARgui.cpp:781
-msgid "hr"
-msgstr "ώ."
-
-#: src/SARgui.cpp:865
-msgid "General settings"
-msgstr "Γενικές ρυθμίσεις"
-
-#: src/SARgui.cpp:872
-msgid "Opacity"
-msgstr "Αδιαφάνεια"
-
-#: src/SARgui.cpp:886
+#
+msgid "'"
+msgstr "'"
+#
+msgid "1"
+msgstr "1"
+#
+msgid "2"
+msgstr "2"
+#
+msgid "Approach course"
+msgstr "Πορεία προσέγγισης"
+#
+#, fuzzy
+msgid "Approach course    "
+msgstr "Πορεία προσέγγισης     "
+#
+#, fuzzy
+msgid "Approach course      "
+msgstr "Πορεία προσέγγισης     "
+#
 msgid "CPU saving settings"
 msgstr "Ρυθμίσεις αποθήκευσης CPU"
-
-#: src/SARgui.cpp:896
-msgid "Capture Ship Position"
-msgstr "Καταγραφή θέσης πλοίου"
-
-#: src/SARgui.cpp:898
-msgid "Leave ticked, so you can use ship's position"
-msgstr "Σημαδέψτε το για να χρησιμοποιήσετε τη θέση του πλοίου"
-
-#: src/SARgui.cpp:902
+#
 msgid "Capture Cursor Position"
 msgstr "Καταγραφή θέσης δρομέα"
-
-#: src/SARgui.cpp:904
-msgid "Leave ticked, so that you can use cursor position."
-msgstr "Σημαδέψτε το για να χρησιμοποιήσετε τη θέση του δρομέα."
-
-#: src/SAR_pi.cpp:154
-msgid "Search and Rescue Patterns"
-msgstr "Μοτίβα Έρευνας και Διάσωσης"
-
-#: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\n"
+#
+msgid "Capture Ship Position"
+msgstr "Καταγραφή θέσης πλοίου"
+#
+msgid "Convert to Degree"
+msgstr "Μετατροπή σε μοίρες"
+#
+msgid "Copy ship position (GPS fix required)"
+msgstr "Αντίγραφο θέσης πλοίου (απαιτείται στίγμα GPS)"
+#
+msgid ""
+"Creates GPX files with\n"
 "Search and rescue patterns."
-msgstr "Δημιουργεί αρχεία GPX με\n"
+msgstr ""
+"Δημιουργεί αρχεία GPX με\n"
 "μοτίβα Έρευνας και Διάσωσης."
-
-#: src/SAR_pi.cpp:232
-msgid "Route Preferences"
-msgstr "Προτιμήσεις διαδρομής"
-
-#: src/SARgui_impl.cpp:176
-msgid "Export SAR track GPX file as"
-msgstr "Εξαγωγή ίχνους SAR ως αρχείο GPX"
-
-#: src/SARgui_impl.cpp:189
-msgid "error in input range validation"
-msgstr "σφάλμα στην επικύρωση της περιοχής"
-
-#: src/SARgui_impl.cpp:232
-msgid "Error occured, aborting SAR calc!"
-msgstr "Παρουσιάστηκε σφάλμα, ματαίωση υπολογισμού SAR!"
-
-#: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
+#
+msgid "Cursor"
+msgstr "Δρομέας"
+#
+msgid "Datum (Start of Search)"
+msgstr "Θέση (έναρξη της αναζήτησης)"
+#
+msgid "Decimal Degree"
+msgstr "Μοίρες με δεκαδικά"
+#
+#, fuzzy
+msgid "Degree, Minutes"
+msgstr "Μοίρες"
+#
+msgid "Degrees"
+msgstr "Μοίρες"
+#
+msgid "E"
+msgstr "Α"
+#
+#, fuzzy
+msgid "ES"
+msgstr "Ν"
+#
+msgid "Error"
+msgstr ""
+#
 msgid "Error in calculation. Please check input!"
 msgstr "Σφάλμα στον υπολογισμό. Ελέγξτε τα δεδομένα!"
-
-#: src/SARgui_impl.cpp:606
-msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "Για να αντιγράψετε τη θέση του δρομέα, επιλέξτε το πεδίο είτε του πλάτους είτε του μήκους και πιέστε <CTRL>+S."
-
-#: src/SARgui_impl.h:54
+#
+#, fuzzy
+msgid "Error occurred, aborting SAR calc!"
+msgstr "Παρουσιάστηκε σφάλμα, ματαίωση υπολογισμού SAR!"
+#
+msgid ""
+"Expanding Square\n"
+"         Search"
+msgstr ""
+"Επέκταση τετραγώνου\n"
+" έρευνας"
+#
+msgid "Export SAR track GPX file as"
+msgstr "Εξαγωγή ίχνους SAR ως αρχείο GPX"
+#
+msgid "GPX route name (Edit?)"
+msgstr ""
+#
+msgid "General settings"
+msgstr "Γενικές ρυθμίσεις"
+#
+msgid "Generate &GPX"
+msgstr "Δημιουργία &GPX"
+#
+msgid "Lat "
+msgstr "Πλάτος "
+#
+msgid "Lattitude  "
+msgstr "Γ. Πλάτος  "
+#
+msgid "Leave ticked, so that you can use cursor position."
+msgstr "Σημαδέψτε το για να χρησιμοποιήσετε τη θέση του δρομέα."
+#
+msgid "Leave ticked, so you can use ship's position"
+msgstr "Σημαδέψτε το για να χρησιμοποιήσετε τη θέση του πλοίου"
+#
+#, fuzzy
+msgid "Leg Distance        "
+msgstr "Μήκος σκέλους          "
+#
+msgid "Leg Space"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Spacing (S)       "
+msgstr "Απόσταση σκελών                "
+#
+msgid "Lon"
+msgstr "Μήκος"
+#
+msgid "Longitude"
+msgstr "Γ. μήκος"
+#
+msgid "N"
+msgstr "Β"
+#
+msgid "NM"
+msgstr "ν. μ."
+#
+msgid "No Datum Point has been entered"
+msgstr ""
+#
+#, fuzzy
+msgid "Number of Legs  "
+msgstr "Αριθμός σκελών   "
+#
+#, fuzzy
+msgid "Number of Legs      "
+msgstr "Αριθμός σκελών       "
+#
+#, fuzzy
+msgid "Number of Legs        "
+msgstr "Αριθμός σκελών       "
+#
+msgid "Number of cycles"
+msgstr "Αριθμός κύκλων"
+#
+msgid "OR"
+msgstr ""
+#
+msgid "Opacity"
+msgstr "Αδιαφάνεια"
+#
+#, fuzzy
+msgid "PS"
+msgstr "Ν"
+#
+#, fuzzy
+msgid "Parallel Track Search"
+msgstr "Παράλληλη έρευνα"
+#
+msgid "Results"
+msgstr "Αποτελέσματα"
+#
+msgid "Route Preferences"
+msgstr "Προτιμήσεις διαδρομής"
+#
+msgid "S"
+msgstr "Ν"
+#
+msgid "SAR"
+msgstr "SAR (ΕκΔ)"
+#
 msgid "SAR Plugin by SaltyPaws"
 msgstr "Πρόσθετο SAR από τον SaltyPaws"
-
+#
+msgid "SAR preferences"
+msgstr "Προτιμήσεις SAR"
+#
+msgid "SAR: Expanding Square"
+msgstr "SAR: Επέκταση τετραγώνου"
+#
+msgid "SAR: Oil Rig"
+msgstr "SAR: Πλατφόρμα πετρελαίου"
+#
+#, fuzzy
+msgid "SAR: Parallel Track"
+msgstr "Παράλληλη έρευνα"
+#
+msgid "SAR: Sector Search"
+msgstr "SAR: Τομέας έρευνας"
+#
+msgid "Search Distance"
+msgstr "Απόσταση έρευνας"
+#
+#, fuzzy
+msgid "Search Leg length     "
+msgstr "Χρόνος έρευνας        "
+#
+#, fuzzy
+msgid "Search Speed       "
+msgstr "Ταχύτητα έρευνας        "
+#
+#, fuzzy
+msgid "Search Speed           "
+msgstr "Ταχύτητα έρευνας             "
+#
+msgid "Search Speed             "
+msgstr "Ταχύτητα έρευνας             "
+#
+#, fuzzy
+msgid "Search Time      "
+msgstr "Χρόνος έρευνας        "
+#
+msgid "Search and Rescue Patterns"
+msgstr "Μοτίβα Έρευνας και Διάσωσης"
+#
+msgid "Sector Search"
+msgstr "Αναζήτηση τομέα"
+#
+msgid "Select SAR Datum Point"
+msgstr ""
+#
+msgid "Ship"
+msgstr "Πλοίο"
+#
+msgid "Ships available           "
+msgstr ""
+#
+msgid "To copy the cursor location press <CTRL>+S"
+msgstr ""
+#
+#, fuzzy
+msgid "Track space (S)          "
+msgstr "Ταχύτητα έρευνας             "
+#
+#, fuzzy
+msgid "VS"
+msgstr "Ν"
+#
+msgid "W"
+msgstr "Δ"
+#
+msgid "Write waypoint names     "
+msgstr ""
+#
+msgid "error in input range validation"
+msgstr "σφάλμα στην επικύρωση της περιοχής"
+#
+msgid "hr"
+msgstr "ώ."
+#
+msgid "kts"
+msgstr "κόμβοι"
+#
+msgid "n"
+msgstr "n"
+#
+#~ msgid "Calculate"
+#~ msgstr "Υπολογισμός"
+#
+#~ msgid "For Ship Number      "
+#~ msgstr "Για το πλοίο #      "
+#
+#~ msgid ""
+#~ "In order to copy the cursor location, select either the Lattitude or "
+#~ "Longitude coordinate box, and press <CTRL>+S."
+#~ msgstr ""
+#~ "Για να αντιγράψετε τη θέση του δρομέα, επιλέξτε το πεδίο είτε του πλάτους "
+#~ "είτε του μήκους και πιέστε <CTRL>+S."
+#
+#~ msgid "Leg Distance              "
+#~ msgstr "Μήκος σκέλους              "
+#
+#~ msgid "Leg Distance               "
+#~ msgstr "Μήκος σκέλους               "
+#
+#~ msgid "Number of Squares"
+#~ msgstr "Αριθμός τετραγώνων"
+#
+#~ msgid "Oil Rig Search"
+#~ msgstr "Αναζήτηση πλατφόρμας πετρελαίου"
+#
+#~ msgid "Route"
+#~ msgstr "Διαδρομή"
+#
+#~ msgid "SAR: Trackline"
+#~ msgstr "SAR: ίχνος"
+#
+#~ msgid "Search Pattern name for GPX file"
+#~ msgstr "Όνομα μοτίβου αναζήτησης για το αρχείο GPX"
+#
+#~ msgid "Search Speed         "
+#~ msgstr "Ταχύτητα αναζήτησης         "
+#
+#~ msgid "\\u00b0"
+#~ msgstr "\\u00b0"
+#
+#~ msgid "\\u00b0 ' \""
+#~ msgstr "\\u00b0 ' \""
