--- a/po/pt.po
+++ b/po/pt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-29 18:59+0100\n"
+"POT-Creation-Date: 2020-06-06 14:43+0100\n"
 "PO-Revision-Date: 2016-02-27 08:05-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Portuguese, Brazilian\n"
@@ -15,298 +15,315 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: pt-BR\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
-
-#: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
-msgid "SAR"
-msgstr "SAR"
-
-#: src/SARgui.h:206 src/SARgui_impl.h:48
-msgid "SAR preferences"
-msgstr "Preferências SAR"
-
-#: src/SARgui.cpp:27
-msgid "Parallel Search"
-msgstr "Busca paralela"
-
-#: src/SARgui.cpp:39 src/SARgui.cpp:188
-msgid "Approach course     "
-msgstr "Rumo de aproximação     "
-
-#: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
-#: src/SARgui.cpp:462
-msgid "Degrees"
-msgstr "Graus"
-
-#: src/SARgui.cpp:56
-msgid "Leg Distance              "
-msgstr "Comprimento da perna              "
-
-#: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
-#: src/SARgui.cpp:445 src/SARgui.cpp:764
-msgid "NM"
-msgstr "NM"
-
-#: src/SARgui.cpp:73
-msgid "Leg Spacing                "
-msgstr "Distancia entre pernas                "
-
-#: src/SARgui.cpp:90
-msgid "Number of Legs       "
-msgstr "Numero de pernas       "
-
-#: src/SARgui.cpp:97 src/SARgui.cpp:229
-msgid "n"
-msgstr "n"
-
-#: src/SARgui.cpp:107 src/SARgui.cpp:239
-msgid "Search Speed             "
-msgstr "Velocidade de busca             "
-
-#: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
-msgid "kts"
-msgstr "KTs"
-
-#: src/SARgui.cpp:124
-msgid "For Ship Number      "
-msgstr "Para número do barco      "
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "1"
-msgstr "1"
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "2"
-msgstr "2"
-
-#: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
-msgid "Calculate"
-msgstr "Calcular"
-
-#: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
-msgid "Generate &GPX"
-msgstr "Gerar &GPX"
-
-#: src/SARgui.cpp:165
-msgid "SAR: Trackline"
-msgstr "SAR: Linha de rumo"
-
-#: src/SARgui.cpp:176
-msgid "Expanding Square\n"
-"         Search"
-msgstr "Expandir Square\n"
-"Pesquisar"
-
-#: src/SARgui.cpp:205
-msgid "Leg Distance               "
-msgstr "Comprimento da perna               "
-
-#: src/SARgui.cpp:222
-msgid "Number of Squares"
-msgstr "Numero de quadrados"
-
-#: src/SARgui.cpp:283
-msgid "SAR: Expanding Square"
-msgstr "SAR: Expandindo quadrados"
-
-#: src/SARgui.cpp:292
-msgid "Sector Search"
-msgstr "Busca por sector"
-
-#: src/SARgui.cpp:304 src/SARgui.cpp:421
-msgid "Approach course"
-msgstr "Rumo de aproximação"
-
-#: src/SARgui.cpp:321 src/SARgui.cpp:438
-msgid "Leg Distance          "
-msgstr "Comprimento da perna          "
-
-#: src/SARgui.cpp:338
-msgid "Search Speed        "
-msgstr "Velocidade de busca        "
-
-#: src/SARgui.cpp:355
-msgid "Number of cycles"
-msgstr "Número de ciclos"
-
-#: src/SARgui.cpp:398
-msgid "SAR: Sector Search"
-msgstr "SAR: Busca por setores"
-
-#: src/SARgui.cpp:409
-msgid "Oil Rig Search"
-msgstr "Procurar Plataforma Petrolifera"
-
-#: src/SARgui.cpp:455
-msgid "Number of Legs   "
-msgstr "Numero de pernas   "
-
-#: src/SARgui.cpp:472
-msgid "Search Speed         "
-msgstr "Velocidade de busca         "
-
-#: src/SARgui.cpp:516
-msgid "SAR: Oil Rig"
-msgstr "SAR: Plataforma Petrolífera"
-
-#: src/SARgui.cpp:529 src/SARgui.cpp:633
-msgid "Datum (Start of Search)"
-msgstr "Datum (Início de busca)"
-
-#: src/SARgui.cpp:540
-msgid "Lattitude  "
-msgstr "Latitude  "
-
-#: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
-msgid "\\u00b0"
-msgstr "\\u00b0"
-
-#: src/SARgui.cpp:557
-msgid "Longitude"
-msgstr "Longitude"
-
-#: src/SARgui.cpp:578
-msgid "Ship"
-msgstr "Navio"
-
-#: src/SARgui.cpp:579
-msgid "Copy ship position (GPS fix required)"
-msgstr "Copiar posição do navio (necessário sinal GPS)"
-
-#: src/SARgui.cpp:583
-msgid "Cursor"
-msgstr "Cursor"
-
-#: src/SARgui.cpp:599
-msgid "Search Pattern name for GPX file"
-msgstr "Busca o nome padrão para o arquivo GPX"
-
-#: src/SARgui.cpp:607
-msgid "Route"
-msgstr "Rota"
-
-#: src/SARgui.cpp:627
-msgid "Decimal Degree"
-msgstr "Graus decimais"
-
-#: src/SARgui.cpp:641
-msgid "Lat "
-msgstr "Lat "
-
-#: src/SARgui.cpp:655 src/SARgui.cpp:692
-msgid "'"
-msgstr "'"
-
-#: src/SARgui.cpp:662 src/SARgui.cpp:699
+#
+msgid "    SAR panel icon has NOT been loaded"
+msgstr ""
+#
+msgid ""
+"   Oil Rig Search\n"
+"(Quadrant Single)"
+msgstr ""
+#
 msgid "\""
 msgstr "\""
-
-#: src/SARgui.cpp:666
-msgid "N"
-msgstr "N"
-
-#: src/SARgui.cpp:666
-msgid "S"
-msgstr "S"
-
-#: src/SARgui.cpp:678
-msgid "Lon"
-msgstr "Lon"
-
-#: src/SARgui.cpp:703
-msgid "E"
-msgstr "E"
-
-#: src/SARgui.cpp:703
-msgid "W"
-msgstr "W"
-
-#: src/SARgui.cpp:721
-msgid "Convert to Degree"
-msgstr "Converter para grau"
-
-#: src/SARgui.cpp:731
-msgid "\\u00b0 ' \""
-msgstr "\\u00b0 ' \""
-
-#: src/SARgui.cpp:745
-msgid "Results"
-msgstr "Resultados"
-
-#: src/SARgui.cpp:757
-msgid "Search Distance"
-msgstr "Distancia de busca"
-
-#: src/SARgui.cpp:774
-msgid "Search Time        "
-msgstr "Tempo de busca        "
-
-#: src/SARgui.cpp:781
-msgid "hr"
-msgstr "hr"
-
-#: src/SARgui.cpp:865
-msgid "General settings"
-msgstr "Definições gerais"
-
-#: src/SARgui.cpp:872
-msgid "Opacity"
-msgstr "Opacidade"
-
-#: src/SARgui.cpp:886
+#
+msgid "'"
+msgstr "'"
+#
+msgid "1"
+msgstr "1"
+#
+msgid "2"
+msgstr "2"
+#
+msgid "Approach course"
+msgstr "Rumo de aproximação"
+#
+#, fuzzy
+msgid "Approach course    "
+msgstr "Rumo de aproximação     "
+#
+#, fuzzy
+msgid "Approach course      "
+msgstr "Rumo de aproximação     "
+#
 msgid "CPU saving settings"
 msgstr "Salvar as configurações de CPU"
-
-#: src/SARgui.cpp:896
-msgid "Capture Ship Position"
-msgstr "Capturar posição do navio"
-
-#: src/SARgui.cpp:898
-msgid "Leave ticked, so you can use ship's position"
-msgstr "Deixar marcada, então você pode usar a posição do navio"
-
-#: src/SARgui.cpp:902
+#
 msgid "Capture Cursor Position"
 msgstr "Capturar posição do cursor"
-
-#: src/SARgui.cpp:904
-msgid "Leave ticked, so that you can use cursor position."
-msgstr "Deixar marcado, para que possa usar a posição do cursor."
-
-#: src/SAR_pi.cpp:154
-msgid "Search and Rescue Patterns"
-msgstr "Padrões de Busca e Salvamento"
-
-#: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\n"
+#
+msgid "Capture Ship Position"
+msgstr "Capturar posição do navio"
+#
+msgid "Convert to Degree"
+msgstr "Converter para grau"
+#
+msgid "Copy ship position (GPS fix required)"
+msgstr "Copiar posição do navio (necessário sinal GPS)"
+#
+msgid ""
+"Creates GPX files with\n"
 "Search and rescue patterns."
-msgstr "Criar arquivos GPX com\n"
+msgstr ""
+"Criar arquivos GPX com\n"
 "padrões de busca e salvamento."
-
-#: src/SAR_pi.cpp:232
-msgid "Route Preferences"
-msgstr "Preferências de rota"
-
-#: src/SARgui_impl.cpp:176
-msgid "Export SAR track GPX file as"
-msgstr "Exportar SAR faixa de arquivo GPX como"
-
-#: src/SARgui_impl.cpp:189
-msgid "error in input range validation"
-msgstr "erro na validação de intervalo de entrada"
-
-#: src/SARgui_impl.cpp:232
-msgid "Error occured, aborting SAR calc!"
-msgstr "Ocorreu um erro, abortando o calculo do SAR!"
-
-#: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
+#
+msgid "Cursor"
+msgstr "Cursor"
+#
+msgid "Datum (Start of Search)"
+msgstr "Datum (Início de busca)"
+#
+msgid "Decimal Degree"
+msgstr "Graus decimais"
+#
+#, fuzzy
+msgid "Degree, Minutes"
+msgstr "Graus"
+#
+msgid "Degrees"
+msgstr "Graus"
+#
+msgid "E"
+msgstr "E"
+#
+#, fuzzy
+msgid "ES"
+msgstr "S"
+#
+msgid "Error"
+msgstr ""
+#
 msgid "Error in calculation. Please check input!"
 msgstr "Erro no cálculo. Por favor, verifique a entrada!"
-
-#: src/SARgui_impl.cpp:606
-msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "Para copiar a localização do cursor, escolha a Latitude ou Longitude na caixa e pressione <CTRL>+S."
-
-#: src/SARgui_impl.h:54
+#
+#, fuzzy
+msgid "Error occurred, aborting SAR calc!"
+msgstr "Ocorreu um erro, abortando o calculo do SAR!"
+#
+msgid ""
+"Expanding Square\n"
+"         Search"
+msgstr ""
+"Expandir Square\n"
+"Pesquisar"
+#
+msgid "Export SAR track GPX file as"
+msgstr "Exportar SAR faixa de arquivo GPX como"
+#
+msgid "GPX route name (Edit?)"
+msgstr ""
+#
+msgid "General settings"
+msgstr "Definições gerais"
+#
+msgid "Generate &GPX"
+msgstr "Gerar &GPX"
+#
+msgid "Lat "
+msgstr "Lat "
+#
+msgid "Lattitude  "
+msgstr "Latitude  "
+#
+msgid "Leave ticked, so that you can use cursor position."
+msgstr "Deixar marcado, para que possa usar a posição do cursor."
+#
+msgid "Leave ticked, so you can use ship's position"
+msgstr "Deixar marcada, então você pode usar a posição do navio"
+#
+#, fuzzy
+msgid "Leg Distance        "
+msgstr "Comprimento da perna          "
+#
+msgid "Leg Space"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Spacing (S)       "
+msgstr "Distancia entre pernas                "
+#
+msgid "Lon"
+msgstr "Lon"
+#
+msgid "Longitude"
+msgstr "Longitude"
+#
+msgid "N"
+msgstr "N"
+#
+msgid "NM"
+msgstr "NM"
+#
+msgid "No Datum Point has been entered"
+msgstr ""
+#
+#, fuzzy
+msgid "Number of Legs  "
+msgstr "Numero de pernas   "
+#
+#, fuzzy
+msgid "Number of Legs      "
+msgstr "Numero de pernas       "
+#
+#, fuzzy
+msgid "Number of Legs        "
+msgstr "Numero de pernas       "
+#
+msgid "Number of cycles"
+msgstr "Número de ciclos"
+#
+msgid "OR"
+msgstr ""
+#
+msgid "Opacity"
+msgstr "Opacidade"
+#
+#, fuzzy
+msgid "PS"
+msgstr "S"
+#
+#, fuzzy
+msgid "Parallel Track Search"
+msgstr "Busca paralela"
+#
+msgid "Results"
+msgstr "Resultados"
+#
+msgid "Route Preferences"
+msgstr "Preferências de rota"
+#
+msgid "S"
+msgstr "S"
+#
+msgid "SAR"
+msgstr "SAR"
+#
 msgid "SAR Plugin by SaltyPaws"
 msgstr "SAR Plugin por SaltyPaws"
-
+#
+msgid "SAR preferences"
+msgstr "Preferências SAR"
+#
+msgid "SAR: Expanding Square"
+msgstr "SAR: Expandindo quadrados"
+#
+msgid "SAR: Oil Rig"
+msgstr "SAR: Plataforma Petrolífera"
+#
+#, fuzzy
+msgid "SAR: Parallel Track"
+msgstr "Busca paralela"
+#
+msgid "SAR: Sector Search"
+msgstr "SAR: Busca por setores"
+#
+msgid "Search Distance"
+msgstr "Distancia de busca"
+#
+#, fuzzy
+msgid "Search Leg length     "
+msgstr "Tempo de busca        "
+#
+#, fuzzy
+msgid "Search Speed       "
+msgstr "Velocidade de busca        "
+#
+#, fuzzy
+msgid "Search Speed           "
+msgstr "Velocidade de busca             "
+#
+msgid "Search Speed             "
+msgstr "Velocidade de busca             "
+#
+#, fuzzy
+msgid "Search Time      "
+msgstr "Tempo de busca        "
+#
+msgid "Search and Rescue Patterns"
+msgstr "Padrões de Busca e Salvamento"
+#
+msgid "Sector Search"
+msgstr "Busca por sector"
+#
+msgid "Select SAR Datum Point"
+msgstr ""
+#
+msgid "Ship"
+msgstr "Navio"
+#
+msgid "Ships available           "
+msgstr ""
+#
+msgid "To copy the cursor location press <CTRL>+S"
+msgstr ""
+#
+#, fuzzy
+msgid "Track space (S)          "
+msgstr "Velocidade de busca             "
+#
+#, fuzzy
+msgid "VS"
+msgstr "S"
+#
+msgid "W"
+msgstr "W"
+#
+msgid "Write waypoint names     "
+msgstr ""
+#
+msgid "error in input range validation"
+msgstr "erro na validação de intervalo de entrada"
+#
+msgid "hr"
+msgstr "hr"
+#
+msgid "kts"
+msgstr "KTs"
+#
+msgid "n"
+msgstr "n"
+#
+#~ msgid "Calculate"
+#~ msgstr "Calcular"
+#
+#~ msgid "For Ship Number      "
+#~ msgstr "Para número do barco      "
+#
+#~ msgid ""
+#~ "In order to copy the cursor location, select either the Lattitude or "
+#~ "Longitude coordinate box, and press <CTRL>+S."
+#~ msgstr ""
+#~ "Para copiar a localização do cursor, escolha a Latitude ou Longitude na "
+#~ "caixa e pressione <CTRL>+S."
+#
+#~ msgid "Leg Distance              "
+#~ msgstr "Comprimento da perna              "
+#
+#~ msgid "Leg Distance               "
+#~ msgstr "Comprimento da perna               "
+#
+#~ msgid "Number of Squares"
+#~ msgstr "Numero de quadrados"
+#
+#~ msgid "Oil Rig Search"
+#~ msgstr "Procurar Plataforma Petrolifera"
+#
+#~ msgid "Route"
+#~ msgstr "Rota"
+#
+#~ msgid "SAR: Trackline"
+#~ msgstr "SAR: Linha de rumo"
+#
+#~ msgid "Search Pattern name for GPX file"
+#~ msgstr "Busca o nome padrão para o arquivo GPX"
+#
+#~ msgid "Search Speed         "
+#~ msgstr "Velocidade de busca         "
+#
+#~ msgid "\\u00b0"
+#~ msgstr "\\u00b0"
+#
+#~ msgid "\\u00b0 ' \""
+#~ msgstr "\\u00b0 ' \""
