--- a/po/da.po
+++ b/po/da.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-29 18:59+0100\n"
+"POT-Creation-Date: 2020-06-06 14:43+0100\n"
 "PO-Revision-Date: 2016-01-16 20:59-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Danish\n"
@@ -15,297 +15,301 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: da\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
-
-#: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
-msgid "SAR"
+#
+msgid "    SAR panel icon has NOT been loaded"
 msgstr ""
-
-#: src/SARgui.h:206 src/SARgui_impl.h:48
-msgid "SAR preferences"
-msgstr "SAR Indstillinger"
-
-#: src/SARgui.cpp:27
-msgid "Parallel Search"
-msgstr "Parallel søgning"
-
-#: src/SARgui.cpp:39 src/SARgui.cpp:188
-msgid "Approach course     "
-msgstr "Indfaldskurs     "
-
-#: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
-#: src/SARgui.cpp:462
-msgid "Degrees"
-msgstr "Grader"
-
-#: src/SARgui.cpp:56
-msgid "Leg Distance              "
-msgstr "Længde på ben              "
-
-#: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
-#: src/SARgui.cpp:445 src/SARgui.cpp:764
-msgid "NM"
-msgstr "sømil"
-
-#: src/SARgui.cpp:73
-msgid "Leg Spacing                "
-msgstr "Afstand mellem ben                "
-
-#: src/SARgui.cpp:90
-msgid "Number of Legs       "
-msgstr "Antal ben       "
-
-#: src/SARgui.cpp:97 src/SARgui.cpp:229
-msgid "n"
-msgstr "n"
-
-#: src/SARgui.cpp:107 src/SARgui.cpp:239
-msgid "Search Speed             "
-msgstr "Søgehastighed             "
-
-#: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
-msgid "kts"
-msgstr "knob"
-
-#: src/SARgui.cpp:124
-msgid "For Ship Number      "
-msgstr "For skip nummer      "
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "1"
+#
+msgid ""
+"   Oil Rig Search\n"
+"(Quadrant Single)"
 msgstr ""
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "2"
-msgstr ""
-
-#: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
-msgid "Calculate"
-msgstr "Beregn"
-
-#: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
-msgid "Generate &GPX"
-msgstr "Generer &GPX"
-
-#: src/SARgui.cpp:165
-msgid "SAR: Trackline"
-msgstr "SAR: Spor"
-
-#: src/SARgui.cpp:176
-msgid "Expanding Square\n"
-"         Search"
-msgstr ""
-
-#: src/SARgui.cpp:205
-msgid "Leg Distance               "
-msgstr "Længde af ben               "
-
-#: src/SARgui.cpp:222
-msgid "Number of Squares"
-msgstr ""
-
-#: src/SARgui.cpp:283
-msgid "SAR: Expanding Square"
-msgstr ""
-
-#: src/SARgui.cpp:292
-msgid "Sector Search"
-msgstr "Sektorsøgning"
-
-#: src/SARgui.cpp:304 src/SARgui.cpp:421
-msgid "Approach course"
-msgstr "Indfaldskurs"
-
-#: src/SARgui.cpp:321 src/SARgui.cpp:438
-msgid "Leg Distance          "
-msgstr "Afstand mellem ben          "
-
-#: src/SARgui.cpp:338
-msgid "Search Speed        "
-msgstr "Søgehastighed        "
-
-#: src/SARgui.cpp:355
-msgid "Number of cycles"
-msgstr "Antal gentagelser"
-
-#: src/SARgui.cpp:398
-msgid "SAR: Sector Search"
-msgstr "SAR: Sektorsøgning"
-
-#: src/SARgui.cpp:409
-msgid "Oil Rig Search"
-msgstr "Borerig-søgning"
-
-#: src/SARgui.cpp:455
-msgid "Number of Legs   "
-msgstr "Antal ben   "
-
-#: src/SARgui.cpp:472
-msgid "Search Speed         "
-msgstr "Søgehastighed         "
-
-#: src/SARgui.cpp:516
-msgid "SAR: Oil Rig"
-msgstr "SAR: Borerig"
-
-#: src/SARgui.cpp:529 src/SARgui.cpp:633
-msgid "Datum (Start of Search)"
-msgstr ""
-
-#: src/SARgui.cpp:540
-msgid "Lattitude  "
-msgstr "Breddegrad  "
-
-#: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
-msgid "\\u00b0"
-msgstr ""
-
-#: src/SARgui.cpp:557
-msgid "Longitude"
-msgstr "Længdegrad"
-
-#: src/SARgui.cpp:578
-msgid "Ship"
-msgstr "Skib"
-
-#: src/SARgui.cpp:579
-msgid "Copy ship position (GPS fix required)"
-msgstr "Kopier skibets position (GPS fix kræves)"
-
-#: src/SARgui.cpp:583
-msgid "Cursor"
-msgstr "Markør"
-
-#: src/SARgui.cpp:599
-msgid "Search Pattern name for GPX file"
-msgstr ""
-
-#: src/SARgui.cpp:607
-msgid "Route"
-msgstr "Rute"
-
-#: src/SARgui.cpp:627
-msgid "Decimal Degree"
-msgstr "Decimalgrader"
-
-#: src/SARgui.cpp:641
-msgid "Lat "
-msgstr "Brd "
-
-#: src/SARgui.cpp:655 src/SARgui.cpp:692
-msgid "'"
-msgstr ""
-
-#: src/SARgui.cpp:662 src/SARgui.cpp:699
+#
 msgid "\""
 msgstr ""
-
-#: src/SARgui.cpp:666
-msgid "N"
+#
+msgid "'"
 msgstr ""
-
-#: src/SARgui.cpp:666
-msgid "S"
+#
+msgid "1"
 msgstr ""
-
-#: src/SARgui.cpp:678
-msgid "Lon"
-msgstr "Lngd"
-
-#: src/SARgui.cpp:703
-msgid "E"
-msgstr "Ø"
-
-#: src/SARgui.cpp:703
-msgid "W"
-msgstr "W"
-
-#: src/SARgui.cpp:721
-msgid "Convert to Degree"
-msgstr "Konverter til grader"
-
-#: src/SARgui.cpp:731
-msgid "\\u00b0 ' \""
-msgstr "\\u00b0 ' \""
-
-#: src/SARgui.cpp:745
-msgid "Results"
-msgstr "Resultater"
-
-#: src/SARgui.cpp:757
-msgid "Search Distance"
-msgstr "Søgeafstand"
-
-#: src/SARgui.cpp:774
-msgid "Search Time        "
-msgstr "Søgetid        "
-
-#: src/SARgui.cpp:781
-msgid "hr"
-msgstr "timer"
-
-#: src/SARgui.cpp:865
-msgid "General settings"
-msgstr "Generelle instillinger"
-
-#: src/SARgui.cpp:872
-msgid "Opacity"
-msgstr "Gennemsigtighed"
-
-#: src/SARgui.cpp:886
+#
+msgid "2"
+msgstr ""
+#
+msgid "Approach course"
+msgstr "Indfaldskurs"
+#
+#, fuzzy
+msgid "Approach course    "
+msgstr "Indfaldskurs     "
+#
+#, fuzzy
+msgid "Approach course      "
+msgstr "Indfaldskurs     "
+#
 msgid "CPU saving settings"
 msgstr "Gemmer indstillinger"
-
-#: src/SARgui.cpp:896
-msgid "Capture Ship Position"
-msgstr "Gem skibets position"
-
-#: src/SARgui.cpp:898
-msgid "Leave ticked, so you can use ship's position"
-msgstr ""
-
-#: src/SARgui.cpp:902
+#
 msgid "Capture Cursor Position"
 msgstr "Gem markørpositionen"
-
-#: src/SARgui.cpp:904
-msgid "Leave ticked, so that you can use cursor position."
-msgstr ""
-
-#: src/SAR_pi.cpp:154
-msgid "Search and Rescue Patterns"
-msgstr "Eftersøgningsmønstre"
-
-#: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\n"
+#
+msgid "Capture Ship Position"
+msgstr "Gem skibets position"
+#
+msgid "Convert to Degree"
+msgstr "Konverter til grader"
+#
+msgid "Copy ship position (GPS fix required)"
+msgstr "Kopier skibets position (GPS fix kræves)"
+#
+msgid ""
+"Creates GPX files with\n"
 "Search and rescue patterns."
-msgstr "Skaber GPX filer med\n"
-"eftersøgningsmønstre."
-
-#: src/SAR_pi.cpp:232
-msgid "Route Preferences"
-msgstr "Ruteindstillinger"
-
-#: src/SARgui_impl.cpp:176
-msgid "Export SAR track GPX file as"
-msgstr "Eksporter SAR spor som GPX fil"
-
-#: src/SARgui_impl.cpp:189
-msgid "error in input range validation"
-msgstr "fejl i inputvalidering"
-
-#: src/SARgui_impl.cpp:232
-msgid "Error occured, aborting SAR calc!"
 msgstr ""
-
-#: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
+"Skaber GPX filer med\n"
+"eftersøgningsmønstre."
+#
+msgid "Cursor"
+msgstr "Markør"
+#
+msgid "Datum (Start of Search)"
+msgstr ""
+#
+msgid "Decimal Degree"
+msgstr "Decimalgrader"
+#
+#, fuzzy
+msgid "Degree, Minutes"
+msgstr "Grader"
+#
+msgid "Degrees"
+msgstr "Grader"
+#
+msgid "E"
+msgstr "Ø"
+#
+#, fuzzy
+msgid "ES"
+msgstr "Ø"
+#
+msgid "Error"
+msgstr ""
+#
 msgid "Error in calculation. Please check input!"
 msgstr "Fejl i beregningen. Tjek venligst input!"
-
-#: src/SARgui_impl.cpp:606
-msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "For at kopiere markørens position, vælg enten bredde- eller længde-koordinatboksen, og tryk <CTRL>+ S."
-
-#: src/SARgui_impl.h:54
+#
+msgid "Error occurred, aborting SAR calc!"
+msgstr ""
+#
+msgid ""
+"Expanding Square\n"
+"         Search"
+msgstr ""
+#
+msgid "Export SAR track GPX file as"
+msgstr "Eksporter SAR spor som GPX fil"
+#
+msgid "GPX route name (Edit?)"
+msgstr ""
+#
+msgid "General settings"
+msgstr "Generelle instillinger"
+#
+msgid "Generate &GPX"
+msgstr "Generer &GPX"
+#
+msgid "Lat "
+msgstr "Brd "
+#
+msgid "Lattitude  "
+msgstr "Breddegrad  "
+#
+msgid "Leave ticked, so that you can use cursor position."
+msgstr ""
+#
+msgid "Leave ticked, so you can use ship's position"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Distance        "
+msgstr "Afstand mellem ben          "
+#
+msgid "Leg Space"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Spacing (S)       "
+msgstr "Afstand mellem ben                "
+#
+msgid "Lon"
+msgstr "Lngd"
+#
+msgid "Longitude"
+msgstr "Længdegrad"
+#
+msgid "N"
+msgstr ""
+#
+msgid "NM"
+msgstr "sømil"
+#
+msgid "No Datum Point has been entered"
+msgstr ""
+#
+#, fuzzy
+msgid "Number of Legs  "
+msgstr "Antal ben   "
+#
+#, fuzzy
+msgid "Number of Legs      "
+msgstr "Antal ben       "
+#
+#, fuzzy
+msgid "Number of Legs        "
+msgstr "Antal ben       "
+#
+msgid "Number of cycles"
+msgstr "Antal gentagelser"
+#
+msgid "OR"
+msgstr ""
+#
+msgid "Opacity"
+msgstr "Gennemsigtighed"
+#
+msgid "PS"
+msgstr ""
+#
+#, fuzzy
+msgid "Parallel Track Search"
+msgstr "Parallel søgning"
+#
+msgid "Results"
+msgstr "Resultater"
+#
+msgid "Route Preferences"
+msgstr "Ruteindstillinger"
+#
+msgid "S"
+msgstr ""
+#
+msgid "SAR"
+msgstr ""
+#
 msgid "SAR Plugin by SaltyPaws"
 msgstr "SAR-Plugin af SaltyPaws"
-
+#
+msgid "SAR preferences"
+msgstr "SAR Indstillinger"
+#
+msgid "SAR: Expanding Square"
+msgstr ""
+#
+msgid "SAR: Oil Rig"
+msgstr "SAR: Borerig"
+#
+#, fuzzy
+msgid "SAR: Parallel Track"
+msgstr "Parallel søgning"
+#
+msgid "SAR: Sector Search"
+msgstr "SAR: Sektorsøgning"
+#
+msgid "Search Distance"
+msgstr "Søgeafstand"
+#
+#, fuzzy
+msgid "Search Leg length     "
+msgstr "Søgetid        "
+#
+#, fuzzy
+msgid "Search Speed       "
+msgstr "Søgehastighed        "
+#
+#, fuzzy
+msgid "Search Speed           "
+msgstr "Søgehastighed             "
+#
+msgid "Search Speed             "
+msgstr "Søgehastighed             "
+#
+#, fuzzy
+msgid "Search Time      "
+msgstr "Søgetid        "
+#
+msgid "Search and Rescue Patterns"
+msgstr "Eftersøgningsmønstre"
+#
+msgid "Sector Search"
+msgstr "Sektorsøgning"
+#
+msgid "Select SAR Datum Point"
+msgstr ""
+#
+msgid "Ship"
+msgstr "Skib"
+#
+msgid "Ships available           "
+msgstr ""
+#
+msgid "To copy the cursor location press <CTRL>+S"
+msgstr ""
+#
+#, fuzzy
+msgid "Track space (S)          "
+msgstr "Søgehastighed             "
+#
+msgid "VS"
+msgstr ""
+#
+msgid "W"
+msgstr "W"
+#
+msgid "Write waypoint names     "
+msgstr ""
+#
+msgid "error in input range validation"
+msgstr "fejl i inputvalidering"
+#
+msgid "hr"
+msgstr "timer"
+#
+msgid "kts"
+msgstr "knob"
+#
+msgid "n"
+msgstr "n"
+#
+#~ msgid "Calculate"
+#~ msgstr "Beregn"
+#
+#~ msgid "For Ship Number      "
+#~ msgstr "For skip nummer      "
+#
+#~ msgid ""
+#~ "In order to copy the cursor location, select either the Lattitude or "
+#~ "Longitude coordinate box, and press <CTRL>+S."
+#~ msgstr ""
+#~ "For at kopiere markørens position, vælg enten bredde- eller længde-"
+#~ "koordinatboksen, og tryk <CTRL>+ S."
+#
+#~ msgid "Leg Distance              "
+#~ msgstr "Længde på ben              "
+#
+#~ msgid "Leg Distance               "
+#~ msgstr "Længde af ben               "
+#
+#~ msgid "Oil Rig Search"
+#~ msgstr "Borerig-søgning"
+#
+#~ msgid "Route"
+#~ msgstr "Rute"
+#
+#~ msgid "SAR: Trackline"
+#~ msgstr "SAR: Spor"
+#
+#~ msgid "Search Speed         "
+#~ msgstr "Søgehastighed         "
+#
+#~ msgid "\\u00b0 ' \""
+#~ msgstr "\\u00b0 ' \""
