--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-29 18:59+0100\n"
+"POT-Creation-Date: 2020-06-06 14:43+0100\n"
 "PO-Revision-Date: 2016-02-25 08:05-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Estonian\n"
@@ -15,298 +15,315 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: et\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
-
-#: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
-msgid "SAR"
-msgstr "SAR"
-
-#: src/SARgui.h:206 src/SARgui_impl.h:48
-msgid "SAR preferences"
-msgstr "SAR eelistused"
-
-#: src/SARgui.cpp:27
-msgid "Parallel Search"
-msgstr "Rööpotsing"
-
-#: src/SARgui.cpp:39 src/SARgui.cpp:188
-msgid "Approach course     "
-msgstr "Lähenemiskurss"
-
-#: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
-#: src/SARgui.cpp:462
-msgid "Degrees"
-msgstr "kraadi"
-
-#: src/SARgui.cpp:56
-msgid "Leg Distance              "
-msgstr "Lõigu pikkus      "
-
-#: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
-#: src/SARgui.cpp:445 src/SARgui.cpp:764
-msgid "NM"
-msgstr "miili"
-
-#: src/SARgui.cpp:73
-msgid "Leg Spacing                "
-msgstr "Lõikude vahe    "
-
-#: src/SARgui.cpp:90
-msgid "Number of Legs       "
-msgstr "Lõikude arv       "
-
-#: src/SARgui.cpp:97 src/SARgui.cpp:229
-msgid "n"
-msgstr "tk"
-
-#: src/SARgui.cpp:107 src/SARgui.cpp:239
-msgid "Search Speed             "
-msgstr "Kiirus otsingul    "
-
-#: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
-msgid "kts"
-msgstr "sõlme"
-
-#: src/SARgui.cpp:124
-msgid "For Ship Number      "
-msgstr "Laeva nr .. jaoks"
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "1"
-msgstr "1"
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "2"
-msgstr "2"
-
-#: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
-msgid "Calculate"
-msgstr "Arvuta"
-
-#: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
-msgid "Generate &GPX"
-msgstr "Loo &GPX"
-
-#: src/SARgui.cpp:165
-msgid "SAR: Trackline"
-msgstr "SAR: rajajoon"
-
-#: src/SARgui.cpp:176
-msgid "Expanding Square\n"
-"         Search"
-msgstr "Suureneva ruudu\n"
-"         otsing"
-
-#: src/SARgui.cpp:205
-msgid "Leg Distance               "
-msgstr "Lõigu pikkus      "
-
-#: src/SARgui.cpp:222
-msgid "Number of Squares"
-msgstr "Ruutude arv     "
-
-#: src/SARgui.cpp:283
-msgid "SAR: Expanding Square"
-msgstr "SAR: suurenev ruut"
-
-#: src/SARgui.cpp:292
-msgid "Sector Search"
-msgstr "Sektorotsing"
-
-#: src/SARgui.cpp:304 src/SARgui.cpp:421
-msgid "Approach course"
-msgstr "Lähenemiskurss"
-
-#: src/SARgui.cpp:321 src/SARgui.cpp:438
-msgid "Leg Distance          "
-msgstr "Lõigu pikkus      "
-
-#: src/SARgui.cpp:338
-msgid "Search Speed        "
-msgstr "Kiirus otsingul    "
-
-#: src/SARgui.cpp:355
-msgid "Number of cycles"
-msgstr "Korduste arv"
-
-#: src/SARgui.cpp:398
-msgid "SAR: Sector Search"
-msgstr "SAR: sektorotsing"
-
-#: src/SARgui.cpp:409
-msgid "Oil Rig Search"
-msgstr "Suureneva ala otsing"
-
-#: src/SARgui.cpp:455
-msgid "Number of Legs   "
-msgstr "Lõikude arv       "
-
-#: src/SARgui.cpp:472
-msgid "Search Speed         "
-msgstr "Kiirus otsingul    "
-
-#: src/SARgui.cpp:516
-msgid "SAR: Oil Rig"
-msgstr "SAR: puurtorn"
-
-#: src/SARgui.cpp:529 src/SARgui.cpp:633
-msgid "Datum (Start of Search)"
-msgstr "Otsingu alguskoordinaadid"
-
-#: src/SARgui.cpp:540
-msgid "Lattitude  "
-msgstr "Laiuskraad  "
-
-#: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
-msgid "\\u00b0"
-msgstr "\\u00b0"
-
-#: src/SARgui.cpp:557
-msgid "Longitude"
-msgstr "Pikkuskraad"
-
-#: src/SARgui.cpp:578
-msgid "Ship"
-msgstr "Laev"
-
-#: src/SARgui.cpp:579
-msgid "Copy ship position (GPS fix required)"
-msgstr "Kopeeri laeva asukoht (GPS'i koht vajalik)"
-
-#: src/SARgui.cpp:583
-msgid "Cursor"
-msgstr "Kursor"
-
-#: src/SARgui.cpp:599
-msgid "Search Pattern name for GPX file"
-msgstr "Otsingu mustri GPX-faili nimi"
-
-#: src/SARgui.cpp:607
-msgid "Route"
-msgstr "Teekond"
-
-#: src/SARgui.cpp:627
-msgid "Decimal Degree"
-msgstr "Kraadi kümnendikes"
-
-#: src/SARgui.cpp:641
-msgid "Lat "
-msgstr "L°"
-
-#: src/SARgui.cpp:655 src/SARgui.cpp:692
-msgid "'"
-msgstr "'"
-
-#: src/SARgui.cpp:662 src/SARgui.cpp:699
+#
+msgid "    SAR panel icon has NOT been loaded"
+msgstr ""
+#
+msgid ""
+"   Oil Rig Search\n"
+"(Quadrant Single)"
+msgstr ""
+#
 msgid "\""
 msgstr "\""
-
-#: src/SARgui.cpp:666
-msgid "N"
-msgstr "N"
-
-#: src/SARgui.cpp:666
-msgid "S"
-msgstr "S"
-
-#: src/SARgui.cpp:678
-msgid "Lon"
-msgstr "P°"
-
-#: src/SARgui.cpp:703
-msgid "E"
-msgstr "E"
-
-#: src/SARgui.cpp:703
-msgid "W"
-msgstr "W"
-
-#: src/SARgui.cpp:721
-msgid "Convert to Degree"
-msgstr "Muuda kraadiks"
-
-#: src/SARgui.cpp:731
-msgid "\\u00b0 ' \""
-msgstr "\\u00b0 ' \""
-
-#: src/SARgui.cpp:745
-msgid "Results"
-msgstr "Tulemused"
-
-#: src/SARgui.cpp:757
-msgid "Search Distance"
-msgstr "Otsingu pikkus"
-
-#: src/SARgui.cpp:774
-msgid "Search Time        "
-msgstr "Aeg otsingul   "
-
-#: src/SARgui.cpp:781
-msgid "hr"
-msgstr "t"
-
-#: src/SARgui.cpp:865
-msgid "General settings"
-msgstr "Üldised seaded"
-
-#: src/SARgui.cpp:872
-msgid "Opacity"
-msgstr "Läbipaistmatus"
-
-#: src/SARgui.cpp:886
+#
+msgid "'"
+msgstr "'"
+#
+msgid "1"
+msgstr "1"
+#
+msgid "2"
+msgstr "2"
+#
+msgid "Approach course"
+msgstr "Lähenemiskurss"
+#
+#, fuzzy
+msgid "Approach course    "
+msgstr "Lähenemiskurss"
+#
+#, fuzzy
+msgid "Approach course      "
+msgstr "Lähenemiskurss"
+#
 msgid "CPU saving settings"
 msgstr "CPU'd säästvad seaded"
-
-#: src/SARgui.cpp:896
-msgid "Capture Ship Position"
-msgstr "Haara laeva asukoht"
-
-#: src/SARgui.cpp:898
-msgid "Leave ticked, so you can use ship's position"
-msgstr "Jäta märgistatuks, et saaksite kasutada laeva asukohta."
-
-#: src/SARgui.cpp:902
+#
 msgid "Capture Cursor Position"
 msgstr "Haara kursori asukoht"
-
-#: src/SARgui.cpp:904
-msgid "Leave ticked, so that you can use cursor position."
-msgstr "Jäta märgistatuks, et saaksite kasutada kursori asukohta."
-
-#: src/SAR_pi.cpp:154
-msgid "Search and Rescue Patterns"
-msgstr "Otsingu ja pääste mustrid"
-
-#: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\n"
+#
+msgid "Capture Ship Position"
+msgstr "Haara laeva asukoht"
+#
+msgid "Convert to Degree"
+msgstr "Muuda kraadiks"
+#
+msgid "Copy ship position (GPS fix required)"
+msgstr "Kopeeri laeva asukoht (GPS'i koht vajalik)"
+#
+msgid ""
+"Creates GPX files with\n"
 "Search and rescue patterns."
-msgstr "Loo GPX-fail koos otsingu\n"
+msgstr ""
+"Loo GPX-fail koos otsingu\n"
 "ja pääste mustritega."
-
-#: src/SAR_pi.cpp:232
-msgid "Route Preferences"
-msgstr "Teekonna eelistused"
-
-#: src/SARgui_impl.cpp:176
-msgid "Export SAR track GPX file as"
-msgstr "Väljasta SAR-jälje GPX-fail kui"
-
-#: src/SARgui_impl.cpp:189
-msgid "error in input range validation"
-msgstr "viga sisestatud ulatuse kontrollimisel"
-
-#: src/SARgui_impl.cpp:232
-msgid "Error occured, aborting SAR calc!"
-msgstr "Viga, katkestan SAR arvutamise!"
-
-#: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
+#
+msgid "Cursor"
+msgstr "Kursor"
+#
+msgid "Datum (Start of Search)"
+msgstr "Otsingu alguskoordinaadid"
+#
+msgid "Decimal Degree"
+msgstr "Kraadi kümnendikes"
+#
+#, fuzzy
+msgid "Degree, Minutes"
+msgstr "kraadi"
+#
+msgid "Degrees"
+msgstr "kraadi"
+#
+msgid "E"
+msgstr "E"
+#
+#, fuzzy
+msgid "ES"
+msgstr "S"
+#
+msgid "Error"
+msgstr ""
+#
 msgid "Error in calculation. Please check input!"
 msgstr "Viga arvutuses. Kontrolli palun sisestatut!"
-
-#: src/SARgui_impl.cpp:606
-msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "Et kopeerida kursori asukoht vali kas laius- või pikkuskoordinaadi kast ja vajuta <CTRL>+S."
-
-#: src/SARgui_impl.h:54
+#
+#, fuzzy
+msgid "Error occurred, aborting SAR calc!"
+msgstr "Viga, katkestan SAR arvutamise!"
+#
+msgid ""
+"Expanding Square\n"
+"         Search"
+msgstr ""
+"Suureneva ruudu\n"
+"         otsing"
+#
+msgid "Export SAR track GPX file as"
+msgstr "Väljasta SAR-jälje GPX-fail kui"
+#
+msgid "GPX route name (Edit?)"
+msgstr ""
+#
+msgid "General settings"
+msgstr "Üldised seaded"
+#
+msgid "Generate &GPX"
+msgstr "Loo &GPX"
+#
+msgid "Lat "
+msgstr "L°"
+#
+msgid "Lattitude  "
+msgstr "Laiuskraad  "
+#
+msgid "Leave ticked, so that you can use cursor position."
+msgstr "Jäta märgistatuks, et saaksite kasutada kursori asukohta."
+#
+msgid "Leave ticked, so you can use ship's position"
+msgstr "Jäta märgistatuks, et saaksite kasutada laeva asukohta."
+#
+#, fuzzy
+msgid "Leg Distance        "
+msgstr "Lõigu pikkus      "
+#
+msgid "Leg Space"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Spacing (S)       "
+msgstr "Lõikude vahe    "
+#
+msgid "Lon"
+msgstr "P°"
+#
+msgid "Longitude"
+msgstr "Pikkuskraad"
+#
+msgid "N"
+msgstr "N"
+#
+msgid "NM"
+msgstr "miili"
+#
+msgid "No Datum Point has been entered"
+msgstr ""
+#
+#, fuzzy
+msgid "Number of Legs  "
+msgstr "Lõikude arv       "
+#
+#, fuzzy
+msgid "Number of Legs      "
+msgstr "Lõikude arv       "
+#
+#, fuzzy
+msgid "Number of Legs        "
+msgstr "Lõikude arv       "
+#
+msgid "Number of cycles"
+msgstr "Korduste arv"
+#
+msgid "OR"
+msgstr ""
+#
+msgid "Opacity"
+msgstr "Läbipaistmatus"
+#
+#, fuzzy
+msgid "PS"
+msgstr "S"
+#
+#, fuzzy
+msgid "Parallel Track Search"
+msgstr "Rööpotsing"
+#
+msgid "Results"
+msgstr "Tulemused"
+#
+msgid "Route Preferences"
+msgstr "Teekonna eelistused"
+#
+msgid "S"
+msgstr "S"
+#
+msgid "SAR"
+msgstr "SAR"
+#
 msgid "SAR Plugin by SaltyPaws"
 msgstr "SaltyPaws'i SAR-plugin"
-
+#
+msgid "SAR preferences"
+msgstr "SAR eelistused"
+#
+msgid "SAR: Expanding Square"
+msgstr "SAR: suurenev ruut"
+#
+msgid "SAR: Oil Rig"
+msgstr "SAR: puurtorn"
+#
+#, fuzzy
+msgid "SAR: Parallel Track"
+msgstr "Rööpotsing"
+#
+msgid "SAR: Sector Search"
+msgstr "SAR: sektorotsing"
+#
+msgid "Search Distance"
+msgstr "Otsingu pikkus"
+#
+#, fuzzy
+msgid "Search Leg length     "
+msgstr "Aeg otsingul   "
+#
+#, fuzzy
+msgid "Search Speed       "
+msgstr "Kiirus otsingul    "
+#
+#, fuzzy
+msgid "Search Speed           "
+msgstr "Kiirus otsingul    "
+#
+msgid "Search Speed             "
+msgstr "Kiirus otsingul    "
+#
+#, fuzzy
+msgid "Search Time      "
+msgstr "Aeg otsingul   "
+#
+msgid "Search and Rescue Patterns"
+msgstr "Otsingu ja pääste mustrid"
+#
+msgid "Sector Search"
+msgstr "Sektorotsing"
+#
+msgid "Select SAR Datum Point"
+msgstr ""
+#
+msgid "Ship"
+msgstr "Laev"
+#
+msgid "Ships available           "
+msgstr ""
+#
+msgid "To copy the cursor location press <CTRL>+S"
+msgstr ""
+#
+#, fuzzy
+msgid "Track space (S)          "
+msgstr "Kiirus otsingul    "
+#
+#, fuzzy
+msgid "VS"
+msgstr "S"
+#
+msgid "W"
+msgstr "W"
+#
+msgid "Write waypoint names     "
+msgstr ""
+#
+msgid "error in input range validation"
+msgstr "viga sisestatud ulatuse kontrollimisel"
+#
+msgid "hr"
+msgstr "t"
+#
+msgid "kts"
+msgstr "sõlme"
+#
+msgid "n"
+msgstr "tk"
+#
+#~ msgid "Calculate"
+#~ msgstr "Arvuta"
+#
+#~ msgid "For Ship Number      "
+#~ msgstr "Laeva nr .. jaoks"
+#
+#~ msgid ""
+#~ "In order to copy the cursor location, select either the Lattitude or "
+#~ "Longitude coordinate box, and press <CTRL>+S."
+#~ msgstr ""
+#~ "Et kopeerida kursori asukoht vali kas laius- või pikkuskoordinaadi kast ja "
+#~ "vajuta <CTRL>+S."
+#
+#~ msgid "Leg Distance              "
+#~ msgstr "Lõigu pikkus      "
+#
+#~ msgid "Leg Distance               "
+#~ msgstr "Lõigu pikkus      "
+#
+#~ msgid "Number of Squares"
+#~ msgstr "Ruutude arv     "
+#
+#~ msgid "Oil Rig Search"
+#~ msgstr "Suureneva ala otsing"
+#
+#~ msgid "Route"
+#~ msgstr "Teekond"
+#
+#~ msgid "SAR: Trackline"
+#~ msgstr "SAR: rajajoon"
+#
+#~ msgid "Search Pattern name for GPX file"
+#~ msgstr "Otsingu mustri GPX-faili nimi"
+#
+#~ msgid "Search Speed         "
+#~ msgstr "Kiirus otsingul    "
+#
+#~ msgid "\\u00b0"
+#~ msgstr "\\u00b0"
+#
+#~ msgid "\\u00b0 ' \""
+#~ msgstr "\\u00b0 ' \""
