--- a/po/fi.po
+++ b/po/fi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-29 18:59+0100\n"
+"POT-Creation-Date: 2020-06-06 14:43+0100\n"
 "PO-Revision-Date: 2016-02-26 09:18-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Finnish\n"
@@ -15,298 +15,315 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: fi\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
-
-#: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
-msgid "SAR"
-msgstr "SAR"
-
-#: src/SARgui.h:206 src/SARgui_impl.h:48
-msgid "SAR preferences"
-msgstr "SAR asetukset"
-
-#: src/SARgui.cpp:27
-msgid "Parallel Search"
-msgstr "Rinnakkaishaku"
-
-#: src/SARgui.cpp:39 src/SARgui.cpp:188
-msgid "Approach course     "
-msgstr "Lähestymiskurssi     "
-
-#: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
-#: src/SARgui.cpp:462
-msgid "Degrees"
-msgstr "Astetta"
-
-#: src/SARgui.cpp:56
-msgid "Leg Distance              "
-msgstr "Reiitiosan pituus              "
-
-#: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
-#: src/SARgui.cpp:445 src/SARgui.cpp:764
-msgid "NM"
-msgstr "NM"
-
-#: src/SARgui.cpp:73
-msgid "Leg Spacing                "
-msgstr "Reittiosien väli                "
-
-#: src/SARgui.cpp:90
-msgid "Number of Legs       "
-msgstr "Reittiosien lukumäärä       "
-
-#: src/SARgui.cpp:97 src/SARgui.cpp:229
-msgid "n"
-msgstr "n"
-
-#: src/SARgui.cpp:107 src/SARgui.cpp:239
-msgid "Search Speed             "
-msgstr "Hakunopeus             "
-
-#: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
-msgid "kts"
-msgstr "kts"
-
-#: src/SARgui.cpp:124
-msgid "For Ship Number      "
-msgstr "Alukselle Numero      "
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "1"
-msgstr "1"
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "2"
-msgstr "2"
-
-#: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
-msgid "Calculate"
-msgstr "Laske"
-
-#: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
-msgid "Generate &GPX"
-msgstr "Luo &GPX"
-
-#: src/SARgui.cpp:165
-msgid "SAR: Trackline"
-msgstr "SAR: Jälkiviiva"
-
-#: src/SARgui.cpp:176
-msgid "Expanding Square\n"
-"         Search"
-msgstr "Laajeneva neliö\n"
-" Haku"
-
-#: src/SARgui.cpp:205
-msgid "Leg Distance               "
-msgstr "Reiitiosan väli               "
-
-#: src/SARgui.cpp:222
-msgid "Number of Squares"
-msgstr "Nelikulmioiden määrä"
-
-#: src/SARgui.cpp:283
-msgid "SAR: Expanding Square"
-msgstr "SAR: Laajeneva nelikulmio"
-
-#: src/SARgui.cpp:292
-msgid "Sector Search"
-msgstr "Sektorihaku"
-
-#: src/SARgui.cpp:304 src/SARgui.cpp:421
-msgid "Approach course"
-msgstr "Lähestymiskurssi"
-
-#: src/SARgui.cpp:321 src/SARgui.cpp:438
-msgid "Leg Distance          "
-msgstr "Reittiosan pituus          "
-
-#: src/SARgui.cpp:338
-msgid "Search Speed        "
-msgstr "Hakunopeus        "
-
-#: src/SARgui.cpp:355
-msgid "Number of cycles"
-msgstr "Jaksojen lukumäärä"
-
-#: src/SARgui.cpp:398
-msgid "SAR: Sector Search"
-msgstr "SAR: Sektorihaku"
-
-#: src/SARgui.cpp:409
-msgid "Oil Rig Search"
-msgstr "Öljytornihaku"
-
-#: src/SARgui.cpp:455
-msgid "Number of Legs   "
-msgstr "Reittiosien lukumäärä   "
-
-#: src/SARgui.cpp:472
-msgid "Search Speed         "
-msgstr "Hakunopeus         "
-
-#: src/SARgui.cpp:516
-msgid "SAR: Oil Rig"
-msgstr "SAR: Öljytorni"
-
-#: src/SARgui.cpp:529 src/SARgui.cpp:633
-msgid "Datum (Start of Search)"
-msgstr "Päivämäärä (Haku alkaa)"
-
-#: src/SARgui.cpp:540
-msgid "Lattitude  "
-msgstr "Leveysaste  "
-
-#: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
-msgid "\\u00b0"
-msgstr "\\u00b0"
-
-#: src/SARgui.cpp:557
-msgid "Longitude"
-msgstr "Pituusaste"
-
-#: src/SARgui.cpp:578
-msgid "Ship"
-msgstr "Alus"
-
-#: src/SARgui.cpp:579
-msgid "Copy ship position (GPS fix required)"
-msgstr "Kopioi aluksen sijainti (GPS-paikka edellytetään)"
-
-#: src/SARgui.cpp:583
-msgid "Cursor"
-msgstr "Kohdistin"
-
-#: src/SARgui.cpp:599
-msgid "Search Pattern name for GPX file"
-msgstr "Etsi kuvion nimi GPX-tiedostolle"
-
-#: src/SARgui.cpp:607
-msgid "Route"
-msgstr "Reitti"
-
-#: src/SARgui.cpp:627
-msgid "Decimal Degree"
-msgstr "Desimaaliaste"
-
-#: src/SARgui.cpp:641
-msgid "Lat "
-msgstr "Lat "
-
-#: src/SARgui.cpp:655 src/SARgui.cpp:692
-msgid "'"
-msgstr "'"
-
-#: src/SARgui.cpp:662 src/SARgui.cpp:699
+#
+msgid "    SAR panel icon has NOT been loaded"
+msgstr ""
+#
+msgid ""
+"   Oil Rig Search\n"
+"(Quadrant Single)"
+msgstr ""
+#
 msgid "\""
 msgstr "\""
-
-#: src/SARgui.cpp:666
-msgid "N"
-msgstr "N"
-
-#: src/SARgui.cpp:666
-msgid "S"
-msgstr "S"
-
-#: src/SARgui.cpp:678
-msgid "Lon"
-msgstr "Lon"
-
-#: src/SARgui.cpp:703
-msgid "E"
-msgstr "E"
-
-#: src/SARgui.cpp:703
-msgid "W"
-msgstr "W"
-
-#: src/SARgui.cpp:721
-msgid "Convert to Degree"
-msgstr "Muunna asteiksi"
-
-#: src/SARgui.cpp:731
-msgid "\\u00b0 ' \""
-msgstr "\\u00b0 ' \""
-
-#: src/SARgui.cpp:745
-msgid "Results"
-msgstr "Tulokset"
-
-#: src/SARgui.cpp:757
-msgid "Search Distance"
-msgstr "Etsintä etäisyys"
-
-#: src/SARgui.cpp:774
-msgid "Search Time        "
-msgstr "Etsintä aika        "
-
-#: src/SARgui.cpp:781
-msgid "hr"
-msgstr "hr"
-
-#: src/SARgui.cpp:865
-msgid "General settings"
-msgstr "Yleisasetukset"
-
-#: src/SARgui.cpp:872
-msgid "Opacity"
-msgstr "Läpinäkyvyys"
-
-#: src/SARgui.cpp:886
+#
+msgid "'"
+msgstr "'"
+#
+msgid "1"
+msgstr "1"
+#
+msgid "2"
+msgstr "2"
+#
+msgid "Approach course"
+msgstr "Lähestymiskurssi"
+#
+#, fuzzy
+msgid "Approach course    "
+msgstr "Lähestymiskurssi     "
+#
+#, fuzzy
+msgid "Approach course      "
+msgstr "Lähestymiskurssi     "
+#
 msgid "CPU saving settings"
 msgstr "CPU tallentaa asetukset"
-
-#: src/SARgui.cpp:896
-msgid "Capture Ship Position"
-msgstr "Talleta aluksen sijainti"
-
-#: src/SARgui.cpp:898
-msgid "Leave ticked, so you can use ship's position"
-msgstr "Aseta merkki, niin voit käyttää sitä aluksen sijaintina"
-
-#: src/SARgui.cpp:902
+#
 msgid "Capture Cursor Position"
 msgstr "Talleta osoittimen sijainti"
-
-#: src/SARgui.cpp:904
-msgid "Leave ticked, so that you can use cursor position."
-msgstr "Aseta merkki, niin voit käyttää sitä kohdistimen sijaintina."
-
-#: src/SAR_pi.cpp:154
-msgid "Search and Rescue Patterns"
-msgstr "Etsi ja pelasta kuviot"
-
-#: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\n"
+#
+msgid "Capture Ship Position"
+msgstr "Talleta aluksen sijainti"
+#
+msgid "Convert to Degree"
+msgstr "Muunna asteiksi"
+#
+msgid "Copy ship position (GPS fix required)"
+msgstr "Kopioi aluksen sijainti (GPS-paikka edellytetään)"
+#
+msgid ""
+"Creates GPX files with\n"
 "Search and rescue patterns."
-msgstr "Luo GPX tiedostot\n"
+msgstr ""
+"Luo GPX tiedostot\n"
 "etsi ja pelasta malleille."
-
-#: src/SAR_pi.cpp:232
-msgid "Route Preferences"
-msgstr "Reittisuositukset"
-
-#: src/SARgui_impl.cpp:176
-msgid "Export SAR track GPX file as"
-msgstr "Vie SAR-jälki GPX-tiedosto muodossa"
-
-#: src/SARgui_impl.cpp:189
-msgid "error in input range validation"
-msgstr "virhe syöttöalueen kevollisuudessa"
-
-#: src/SARgui_impl.cpp:232
-msgid "Error occured, aborting SAR calc!"
-msgstr "Virhe, keskeytetään SAR-laskut!"
-
-#: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
+#
+msgid "Cursor"
+msgstr "Kohdistin"
+#
+msgid "Datum (Start of Search)"
+msgstr "Päivämäärä (Haku alkaa)"
+#
+msgid "Decimal Degree"
+msgstr "Desimaaliaste"
+#
+#, fuzzy
+msgid "Degree, Minutes"
+msgstr "Astetta"
+#
+msgid "Degrees"
+msgstr "Astetta"
+#
+msgid "E"
+msgstr "E"
+#
+#, fuzzy
+msgid "ES"
+msgstr "S"
+#
+msgid "Error"
+msgstr ""
+#
 msgid "Error in calculation. Please check input!"
 msgstr "Virhe laskuissa. tarkista syöttö!"
-
-#: src/SARgui_impl.cpp:606
-msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "Jos kopioit kohdistimen sijainnin, valitse joko leveys- tai pituuskoordinaattiruutu, ja paina <CTRL>+ S."
-
-#: src/SARgui_impl.h:54
+#
+#, fuzzy
+msgid "Error occurred, aborting SAR calc!"
+msgstr "Virhe, keskeytetään SAR-laskut!"
+#
+msgid ""
+"Expanding Square\n"
+"         Search"
+msgstr ""
+"Laajeneva neliö\n"
+" Haku"
+#
+msgid "Export SAR track GPX file as"
+msgstr "Vie SAR-jälki GPX-tiedosto muodossa"
+#
+msgid "GPX route name (Edit?)"
+msgstr ""
+#
+msgid "General settings"
+msgstr "Yleisasetukset"
+#
+msgid "Generate &GPX"
+msgstr "Luo &GPX"
+#
+msgid "Lat "
+msgstr "Lat "
+#
+msgid "Lattitude  "
+msgstr "Leveysaste  "
+#
+msgid "Leave ticked, so that you can use cursor position."
+msgstr "Aseta merkki, niin voit käyttää sitä kohdistimen sijaintina."
+#
+msgid "Leave ticked, so you can use ship's position"
+msgstr "Aseta merkki, niin voit käyttää sitä aluksen sijaintina"
+#
+#, fuzzy
+msgid "Leg Distance        "
+msgstr "Reittiosan pituus          "
+#
+msgid "Leg Space"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Spacing (S)       "
+msgstr "Reittiosien väli                "
+#
+msgid "Lon"
+msgstr "Lon"
+#
+msgid "Longitude"
+msgstr "Pituusaste"
+#
+msgid "N"
+msgstr "N"
+#
+msgid "NM"
+msgstr "NM"
+#
+msgid "No Datum Point has been entered"
+msgstr ""
+#
+#, fuzzy
+msgid "Number of Legs  "
+msgstr "Reittiosien lukumäärä   "
+#
+#, fuzzy
+msgid "Number of Legs      "
+msgstr "Reittiosien lukumäärä       "
+#
+#, fuzzy
+msgid "Number of Legs        "
+msgstr "Reittiosien lukumäärä       "
+#
+msgid "Number of cycles"
+msgstr "Jaksojen lukumäärä"
+#
+msgid "OR"
+msgstr ""
+#
+msgid "Opacity"
+msgstr "Läpinäkyvyys"
+#
+#, fuzzy
+msgid "PS"
+msgstr "S"
+#
+#, fuzzy
+msgid "Parallel Track Search"
+msgstr "Rinnakkaishaku"
+#
+msgid "Results"
+msgstr "Tulokset"
+#
+msgid "Route Preferences"
+msgstr "Reittisuositukset"
+#
+msgid "S"
+msgstr "S"
+#
+msgid "SAR"
+msgstr "SAR"
+#
 msgid "SAR Plugin by SaltyPaws"
 msgstr "SAR lisäosa SaltyPaws:in tapaan"
-
+#
+msgid "SAR preferences"
+msgstr "SAR asetukset"
+#
+msgid "SAR: Expanding Square"
+msgstr "SAR: Laajeneva nelikulmio"
+#
+msgid "SAR: Oil Rig"
+msgstr "SAR: Öljytorni"
+#
+#, fuzzy
+msgid "SAR: Parallel Track"
+msgstr "Rinnakkaishaku"
+#
+msgid "SAR: Sector Search"
+msgstr "SAR: Sektorihaku"
+#
+msgid "Search Distance"
+msgstr "Etsintä etäisyys"
+#
+#, fuzzy
+msgid "Search Leg length     "
+msgstr "Etsintä aika        "
+#
+#, fuzzy
+msgid "Search Speed       "
+msgstr "Hakunopeus        "
+#
+#, fuzzy
+msgid "Search Speed           "
+msgstr "Hakunopeus             "
+#
+msgid "Search Speed             "
+msgstr "Hakunopeus             "
+#
+#, fuzzy
+msgid "Search Time      "
+msgstr "Etsintä aika        "
+#
+msgid "Search and Rescue Patterns"
+msgstr "Etsi ja pelasta kuviot"
+#
+msgid "Sector Search"
+msgstr "Sektorihaku"
+#
+msgid "Select SAR Datum Point"
+msgstr ""
+#
+msgid "Ship"
+msgstr "Alus"
+#
+msgid "Ships available           "
+msgstr ""
+#
+msgid "To copy the cursor location press <CTRL>+S"
+msgstr ""
+#
+#, fuzzy
+msgid "Track space (S)          "
+msgstr "Hakunopeus             "
+#
+#, fuzzy
+msgid "VS"
+msgstr "S"
+#
+msgid "W"
+msgstr "W"
+#
+msgid "Write waypoint names     "
+msgstr ""
+#
+msgid "error in input range validation"
+msgstr "virhe syöttöalueen kevollisuudessa"
+#
+msgid "hr"
+msgstr "hr"
+#
+msgid "kts"
+msgstr "kts"
+#
+msgid "n"
+msgstr "n"
+#
+#~ msgid "Calculate"
+#~ msgstr "Laske"
+#
+#~ msgid "For Ship Number      "
+#~ msgstr "Alukselle Numero      "
+#
+#~ msgid ""
+#~ "In order to copy the cursor location, select either the Lattitude or "
+#~ "Longitude coordinate box, and press <CTRL>+S."
+#~ msgstr ""
+#~ "Jos kopioit kohdistimen sijainnin, valitse joko leveys- tai "
+#~ "pituuskoordinaattiruutu, ja paina <CTRL>+ S."
+#
+#~ msgid "Leg Distance              "
+#~ msgstr "Reiitiosan pituus              "
+#
+#~ msgid "Leg Distance               "
+#~ msgstr "Reiitiosan väli               "
+#
+#~ msgid "Number of Squares"
+#~ msgstr "Nelikulmioiden määrä"
+#
+#~ msgid "Oil Rig Search"
+#~ msgstr "Öljytornihaku"
+#
+#~ msgid "Route"
+#~ msgstr "Reitti"
+#
+#~ msgid "SAR: Trackline"
+#~ msgstr "SAR: Jälkiviiva"
+#
+#~ msgid "Search Pattern name for GPX file"
+#~ msgstr "Etsi kuvion nimi GPX-tiedostolle"
+#
+#~ msgid "Search Speed         "
+#~ msgstr "Hakunopeus         "
+#
+#~ msgid "\\u00b0"
+#~ msgstr "\\u00b0"
+#
+#~ msgid "\\u00b0 ' \""
+#~ msgstr "\\u00b0 ' \""
