--- a/po/nb.po
+++ b/po/nb.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: opencpn\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-10-29 18:59+0100\n"
+"POT-Creation-Date: 2020-06-06 14:43+0100\n"
 "PO-Revision-Date: 2016-02-25 08:05-0500\n"
 "Last-Translator: nohal <pavel@kalian.cz>\n"
 "Language-Team: Norwegian Bokmal\n"
@@ -15,298 +15,315 @@ msgstr ""
 "X-Crowdin-Project: opencpn\n"
 "X-Crowdin-Language: nb\n"
 "X-Crowdin-File: /plugins/SAR_pi/po/SAR_pi.pot\n"
-
-#: src/SARgui.h:183 src/SAR_pi.cpp:89 src/SAR_pi.cpp:148
-msgid "SAR"
-msgstr "SAR"
-
-#: src/SARgui.h:206 src/SARgui_impl.h:48
-msgid "SAR preferences"
-msgstr "SAR-egenskaper"
-
-#: src/SARgui.cpp:27
-msgid "Parallel Search"
-msgstr "Parallellsøk"
-
-#: src/SARgui.cpp:39 src/SARgui.cpp:188
-msgid "Approach course     "
-msgstr "Ankomstkurs     "
-
-#: src/SARgui.cpp:46 src/SARgui.cpp:195 src/SARgui.cpp:311 src/SARgui.cpp:428
-#: src/SARgui.cpp:462
-msgid "Degrees"
-msgstr "Grader"
-
-#: src/SARgui.cpp:56
-msgid "Leg Distance              "
-msgstr "Leggdistanse              "
-
-#: src/SARgui.cpp:63 src/SARgui.cpp:80 src/SARgui.cpp:212 src/SARgui.cpp:328
-#: src/SARgui.cpp:445 src/SARgui.cpp:764
-msgid "NM"
-msgstr "NM"
-
-#: src/SARgui.cpp:73
-msgid "Leg Spacing                "
-msgstr "Leggavstand                "
-
-#: src/SARgui.cpp:90
-msgid "Number of Legs       "
-msgstr "Antall legger       "
-
-#: src/SARgui.cpp:97 src/SARgui.cpp:229
-msgid "n"
-msgstr "n"
-
-#: src/SARgui.cpp:107 src/SARgui.cpp:239
-msgid "Search Speed             "
-msgstr "Søkefart             "
-
-#: src/SARgui.cpp:114 src/SARgui.cpp:246 src/SARgui.cpp:345 src/SARgui.cpp:479
-msgid "kts"
-msgstr "kn"
-
-#: src/SARgui.cpp:124
-msgid "For Ship Number      "
-msgstr "For skip nummer      "
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "1"
-msgstr "1"
-
-#: src/SARgui.cpp:128 src/SARgui.cpp:359
-msgid "2"
-msgstr "2"
-
-#: src/SARgui.cpp:140 src/SARgui.cpp:256 src/SARgui.cpp:371 src/SARgui.cpp:489
-msgid "Calculate"
-msgstr "Beregn"
-
-#: src/SARgui.cpp:143 src/SARgui.cpp:259 src/SARgui.cpp:374 src/SARgui.cpp:492
-msgid "Generate &GPX"
-msgstr "Generer &GPX"
-
-#: src/SARgui.cpp:165
-msgid "SAR: Trackline"
-msgstr "SAR: Sporings-strek"
-
-#: src/SARgui.cpp:176
-msgid "Expanding Square\n"
-"         Search"
-msgstr "Ekspanderende firkant-\n"
-" søk"
-
-#: src/SARgui.cpp:205
-msgid "Leg Distance               "
-msgstr "Leggdistanse               "
-
-#: src/SARgui.cpp:222
-msgid "Number of Squares"
-msgstr "Antall firkanter"
-
-#: src/SARgui.cpp:283
-msgid "SAR: Expanding Square"
-msgstr "SAR: Utvider firkant"
-
-#: src/SARgui.cpp:292
-msgid "Sector Search"
-msgstr "Sektorsøk"
-
-#: src/SARgui.cpp:304 src/SARgui.cpp:421
-msgid "Approach course"
-msgstr "Anløpskurs"
-
-#: src/SARgui.cpp:321 src/SARgui.cpp:438
-msgid "Leg Distance          "
-msgstr "Leggdistanse          "
-
-#: src/SARgui.cpp:338
-msgid "Search Speed        "
-msgstr "Søkefart        "
-
-#: src/SARgui.cpp:355
-msgid "Number of cycles"
-msgstr "Antall sykluser"
-
-#: src/SARgui.cpp:398
-msgid "SAR: Sector Search"
-msgstr "SAR: Sektorsøk"
-
-#: src/SARgui.cpp:409
-msgid "Oil Rig Search"
-msgstr "Oljerigg søk"
-
-#: src/SARgui.cpp:455
-msgid "Number of Legs   "
-msgstr "Antall legger   "
-
-#: src/SARgui.cpp:472
-msgid "Search Speed         "
-msgstr "Søkefart         "
-
-#: src/SARgui.cpp:516
-msgid "SAR: Oil Rig"
-msgstr "SAR: Oljerigg"
-
-#: src/SARgui.cpp:529 src/SARgui.cpp:633
-msgid "Datum (Start of Search)"
-msgstr "Datum (Start for søket)"
-
-#: src/SARgui.cpp:540
-msgid "Lattitude  "
-msgstr "Breddegrad  "
-
-#: src/SARgui.cpp:547 src/SARgui.cpp:564 src/SARgui.cpp:648 src/SARgui.cpp:685
-msgid "\\u00b0"
-msgstr "\\u00b0"
-
-#: src/SARgui.cpp:557
-msgid "Longitude"
-msgstr "Lengdegrad"
-
-#: src/SARgui.cpp:578
-msgid "Ship"
-msgstr "Skip"
-
-#: src/SARgui.cpp:579
-msgid "Copy ship position (GPS fix required)"
-msgstr "Kopier skipsposisjon (GPS-lås er påkrevd)"
-
-#: src/SARgui.cpp:583
-msgid "Cursor"
-msgstr "Kursor"
-
-#: src/SARgui.cpp:599
-msgid "Search Pattern name for GPX file"
-msgstr "Søkemønster navn for GPX-fil"
-
-#: src/SARgui.cpp:607
-msgid "Route"
-msgstr "Rute"
-
-#: src/SARgui.cpp:627
-msgid "Decimal Degree"
-msgstr "Desimal grader"
-
-#: src/SARgui.cpp:641
-msgid "Lat "
-msgstr "Bgrad "
-
-#: src/SARgui.cpp:655 src/SARgui.cpp:692
-msgid "'"
-msgstr "'"
-
-#: src/SARgui.cpp:662 src/SARgui.cpp:699
+#
+msgid "    SAR panel icon has NOT been loaded"
+msgstr ""
+#
+msgid ""
+"   Oil Rig Search\n"
+"(Quadrant Single)"
+msgstr ""
+#
 msgid "\""
 msgstr "\""
-
-#: src/SARgui.cpp:666
-msgid "N"
-msgstr "N"
-
-#: src/SARgui.cpp:666
-msgid "S"
-msgstr "S"
-
-#: src/SARgui.cpp:678
-msgid "Lon"
-msgstr "Lgrad"
-
-#: src/SARgui.cpp:703
-msgid "E"
-msgstr "Ø"
-
-#: src/SARgui.cpp:703
-msgid "W"
-msgstr "V"
-
-#: src/SARgui.cpp:721
-msgid "Convert to Degree"
-msgstr "Konverter til grader"
-
-#: src/SARgui.cpp:731
-msgid "\\u00b0 ' \""
-msgstr "\\u00b0 ' \""
-
-#: src/SARgui.cpp:745
-msgid "Results"
-msgstr "Resultat"
-
-#: src/SARgui.cpp:757
-msgid "Search Distance"
-msgstr "Distansesøk"
-
-#: src/SARgui.cpp:774
-msgid "Search Time        "
-msgstr "Søketid        "
-
-#: src/SARgui.cpp:781
-msgid "hr"
-msgstr "tim"
-
-#: src/SARgui.cpp:865
-msgid "General settings"
-msgstr "Generelle innstillinger"
-
-#: src/SARgui.cpp:872
-msgid "Opacity"
-msgstr "Gjennomsiktighet"
-
-#: src/SARgui.cpp:886
+#
+msgid "'"
+msgstr "'"
+#
+msgid "1"
+msgstr "1"
+#
+msgid "2"
+msgstr "2"
+#
+msgid "Approach course"
+msgstr "Anløpskurs"
+#
+#, fuzzy
+msgid "Approach course    "
+msgstr "Ankomstkurs     "
+#
+#, fuzzy
+msgid "Approach course      "
+msgstr "Ankomstkurs     "
+#
 msgid "CPU saving settings"
 msgstr "Innstillinger for CPU strømsparing"
-
-#: src/SARgui.cpp:896
-msgid "Capture Ship Position"
-msgstr "Lagre skipsposisjon"
-
-#: src/SARgui.cpp:898
-msgid "Leave ticked, so you can use ship's position"
-msgstr "La være merket, slik at du kan bruke skipets posisjon"
-
-#: src/SARgui.cpp:902
+#
 msgid "Capture Cursor Position"
 msgstr "Lagre kursorposisjon"
-
-#: src/SARgui.cpp:904
-msgid "Leave ticked, so that you can use cursor position."
-msgstr "La være merket, slik at du kan benytte kursorposisjon."
-
-#: src/SAR_pi.cpp:154
-msgid "Search and Rescue Patterns"
-msgstr "Søk og rednings mønstre"
-
-#: src/SAR_pi.cpp:159
-msgid "Creates GPX files with\n"
+#
+msgid "Capture Ship Position"
+msgstr "Lagre skipsposisjon"
+#
+msgid "Convert to Degree"
+msgstr "Konverter til grader"
+#
+msgid "Copy ship position (GPS fix required)"
+msgstr "Kopier skipsposisjon (GPS-lås er påkrevd)"
+#
+msgid ""
+"Creates GPX files with\n"
 "Search and rescue patterns."
-msgstr "Oppretter GPX filer med\n"
+msgstr ""
+"Oppretter GPX filer med\n"
 "Søk og rednings mønstre."
-
-#: src/SAR_pi.cpp:232
-msgid "Route Preferences"
-msgstr "Egenskaper for rute"
-
-#: src/SARgui_impl.cpp:176
-msgid "Export SAR track GPX file as"
-msgstr "Eksporter SAR slepestrek GPX-fil som"
-
-#: src/SARgui_impl.cpp:189
-msgid "error in input range validation"
-msgstr "feil i validering av inndata-område"
-
-#: src/SARgui_impl.cpp:232
-msgid "Error occured, aborting SAR calc!"
-msgstr "Feil oppstod, avbryter SAR kalkulering!"
-
-#: src/SARgui_impl.cpp:551 src/SARgui_impl.cpp:552
+#
+msgid "Cursor"
+msgstr "Kursor"
+#
+msgid "Datum (Start of Search)"
+msgstr "Datum (Start for søket)"
+#
+msgid "Decimal Degree"
+msgstr "Desimal grader"
+#
+#, fuzzy
+msgid "Degree, Minutes"
+msgstr "Grader"
+#
+msgid "Degrees"
+msgstr "Grader"
+#
+msgid "E"
+msgstr "Ø"
+#
+#, fuzzy
+msgid "ES"
+msgstr "S"
+#
+msgid "Error"
+msgstr ""
+#
 msgid "Error in calculation. Please check input!"
 msgstr "Feil i kalkulering, sjekk inn-data!"
-
-#: src/SARgui_impl.cpp:606
-msgid "In order to copy the cursor location, select either the Lattitude or Longitude coordinate box, and press <CTRL>+S."
-msgstr "For å kunne kopiere kursorposisjon, velg enten breddegrad eller lengdegrad koordinatboksen og trykk <CTRL>+S."
-
-#: src/SARgui_impl.h:54
+#
+#, fuzzy
+msgid "Error occurred, aborting SAR calc!"
+msgstr "Feil oppstod, avbryter SAR kalkulering!"
+#
+msgid ""
+"Expanding Square\n"
+"         Search"
+msgstr ""
+"Ekspanderende firkant-\n"
+" søk"
+#
+msgid "Export SAR track GPX file as"
+msgstr "Eksporter SAR slepestrek GPX-fil som"
+#
+msgid "GPX route name (Edit?)"
+msgstr ""
+#
+msgid "General settings"
+msgstr "Generelle innstillinger"
+#
+msgid "Generate &GPX"
+msgstr "Generer &GPX"
+#
+msgid "Lat "
+msgstr "Bgrad "
+#
+msgid "Lattitude  "
+msgstr "Breddegrad  "
+#
+msgid "Leave ticked, so that you can use cursor position."
+msgstr "La være merket, slik at du kan benytte kursorposisjon."
+#
+msgid "Leave ticked, so you can use ship's position"
+msgstr "La være merket, slik at du kan bruke skipets posisjon"
+#
+#, fuzzy
+msgid "Leg Distance        "
+msgstr "Leggdistanse          "
+#
+msgid "Leg Space"
+msgstr ""
+#
+#, fuzzy
+msgid "Leg Spacing (S)       "
+msgstr "Leggavstand                "
+#
+msgid "Lon"
+msgstr "Lgrad"
+#
+msgid "Longitude"
+msgstr "Lengdegrad"
+#
+msgid "N"
+msgstr "N"
+#
+msgid "NM"
+msgstr "NM"
+#
+msgid "No Datum Point has been entered"
+msgstr ""
+#
+#, fuzzy
+msgid "Number of Legs  "
+msgstr "Antall legger   "
+#
+#, fuzzy
+msgid "Number of Legs      "
+msgstr "Antall legger       "
+#
+#, fuzzy
+msgid "Number of Legs        "
+msgstr "Antall legger       "
+#
+msgid "Number of cycles"
+msgstr "Antall sykluser"
+#
+msgid "OR"
+msgstr ""
+#
+msgid "Opacity"
+msgstr "Gjennomsiktighet"
+#
+#, fuzzy
+msgid "PS"
+msgstr "S"
+#
+#, fuzzy
+msgid "Parallel Track Search"
+msgstr "Parallellsøk"
+#
+msgid "Results"
+msgstr "Resultat"
+#
+msgid "Route Preferences"
+msgstr "Egenskaper for rute"
+#
+msgid "S"
+msgstr "S"
+#
+msgid "SAR"
+msgstr "SAR"
+#
 msgid "SAR Plugin by SaltyPaws"
 msgstr "SAR utvidelse av SaltyPaws"
-
+#
+msgid "SAR preferences"
+msgstr "SAR-egenskaper"
+#
+msgid "SAR: Expanding Square"
+msgstr "SAR: Utvider firkant"
+#
+msgid "SAR: Oil Rig"
+msgstr "SAR: Oljerigg"
+#
+#, fuzzy
+msgid "SAR: Parallel Track"
+msgstr "Parallellsøk"
+#
+msgid "SAR: Sector Search"
+msgstr "SAR: Sektorsøk"
+#
+msgid "Search Distance"
+msgstr "Distansesøk"
+#
+#, fuzzy
+msgid "Search Leg length     "
+msgstr "Søketid        "
+#
+#, fuzzy
+msgid "Search Speed       "
+msgstr "Søkefart        "
+#
+#, fuzzy
+msgid "Search Speed           "
+msgstr "Søkefart             "
+#
+msgid "Search Speed             "
+msgstr "Søkefart             "
+#
+#, fuzzy
+msgid "Search Time      "
+msgstr "Søketid        "
+#
+msgid "Search and Rescue Patterns"
+msgstr "Søk og rednings mønstre"
+#
+msgid "Sector Search"
+msgstr "Sektorsøk"
+#
+msgid "Select SAR Datum Point"
+msgstr ""
+#
+msgid "Ship"
+msgstr "Skip"
+#
+msgid "Ships available           "
+msgstr ""
+#
+msgid "To copy the cursor location press <CTRL>+S"
+msgstr ""
+#
+#, fuzzy
+msgid "Track space (S)          "
+msgstr "Søkefart             "
+#
+#, fuzzy
+msgid "VS"
+msgstr "S"
+#
+msgid "W"
+msgstr "V"
+#
+msgid "Write waypoint names     "
+msgstr ""
+#
+msgid "error in input range validation"
+msgstr "feil i validering av inndata-område"
+#
+msgid "hr"
+msgstr "tim"
+#
+msgid "kts"
+msgstr "kn"
+#
+msgid "n"
+msgstr "n"
+#
+#~ msgid "Calculate"
+#~ msgstr "Beregn"
+#
+#~ msgid "For Ship Number      "
+#~ msgstr "For skip nummer      "
+#
+#~ msgid ""
+#~ "In order to copy the cursor location, select either the Lattitude or "
+#~ "Longitude coordinate box, and press <CTRL>+S."
+#~ msgstr ""
+#~ "For å kunne kopiere kursorposisjon, velg enten breddegrad eller lengdegrad "
+#~ "koordinatboksen og trykk <CTRL>+S."
+#
+#~ msgid "Leg Distance              "
+#~ msgstr "Leggdistanse              "
+#
+#~ msgid "Leg Distance               "
+#~ msgstr "Leggdistanse               "
+#
+#~ msgid "Number of Squares"
+#~ msgstr "Antall firkanter"
+#
+#~ msgid "Oil Rig Search"
+#~ msgstr "Oljerigg søk"
+#
+#~ msgid "Route"
+#~ msgstr "Rute"
+#
+#~ msgid "SAR: Trackline"
+#~ msgstr "SAR: Sporings-strek"
+#
+#~ msgid "Search Pattern name for GPX file"
+#~ msgstr "Søkemønster navn for GPX-fil"
+#
+#~ msgid "Search Speed         "
+#~ msgstr "Søkefart         "
+#
+#~ msgid "\\u00b0"
+#~ msgstr "\\u00b0"
+#
+#~ msgid "\\u00b0 ' \""
+#~ msgstr "\\u00b0 ' \""
